--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
 
     implementation "com.google.android.material:material:1.1.0"
 
+    implementation 'com.android.volley:volley:1.1.0'
+
 }
